# mall-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  dev.ps1  pyproject.toml  requirements.txt
backend/app/: __init__.py  serve.py
backend/app/agents/: payment_agent.py  risk_agent.py  wallet_agent.py
backend/app/api/: chat.py
backend/app/cli/: __init__.py
backend/app/core/: config.py
backend/app/db/: qdrant.py  redis.py
backend/app/graph/: state.py  supervisor.py
backend/app/services/: embedding.py  kb_ingest.py  (+1 more)
docs/: CODE_WALKTHROUGH_zh.md  KB_INGESTION_zh.md  TOKEN_OPTIMIZATION_zh.md
frontend/: Dockerfile  index.html  package.json
repo/: .env.example  README.md  run-backend.ps1
repo/.cursor/: mcp.json
repo/backend/: Dockerfile  pyproject.toml
repo/backend/app/: main.py  sdfsd.ipynb
repo/backend/app/agents/: payment_agent.py  risk_agent.py  wallet_agent.py
repo/backend/app/cli/: ingest_kb.py
repo/backend/app/core/: config.py  context.py  fast_route.py  prompts.py  routing.py
repo/backend/app/db/: qdrant.py
repo/backend/app/graph/: specialists.py  state.py  supervisor.py
repo/backend/app/services/: kb_ingest.py  rag_cache.py
repo/backend/app/tools/: rag_tool.py
repo/backend/data/kb/: README.md
repo/backend/data/kb/faq/: payment_faq.jsonl
repo/backend/data/kb/product/: refund_policy.md
repo/backend/tests/: test_context.py  test_fast_route.py  test_prompts.py  test_routing.py
repo/docs/: ARCHITECTURE.md  PERFORMANCE_zh.md
repo/frontend/: nginx.conf  package-lock.json
(+11 files in other folders)
