[project]
name = "mall-agent-backend"
version = "0.1.0"
description = "Multi-agent customer service backend (FastAPI + LangGraph + Qdrant + Redis)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic-settings==2.7.0",
    "langgraph==0.2.76",
    "langchain-core==0.3.59",
    "langchain-openai==0.3.17",
    "qdrant-client==1.12.2",
    "redis==5.2.1",
    "httpx==0.28.1",
    "rank-bm25==0.2.2",
    "numpy>=1.26.4,<2",
]

[project.scripts]
mall-serve = "app.serve:main"
mall-ingest-kb = "app.cli.ingest_kb:main"

[dependency-groups]
dev = [
    "ruff==0.8.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.uv]
default-groups = []
# 只装依赖，不把当前项目打成 wheel（避免 hatch 构建失败导致 .venv 里几乎没有包）
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
